2017-11-29  Jonathan Bedard  <jbedard@apple.com>

        webkitpy: Trying to use iOS versions from machines without iOS SDKs doesn't make sense
        https://bugs.webkit.org/show_bug.cgi?id=179534
        <rdar://problem/35469509>

        Reviewed by Brent Fulgham.

        Provide more specific information in builders.py so that machines do not try and calculate
        an iOS SDK version while running tests.

        * Scripts/webkitpy/port/builders.py: Explicitly specify a version for iOS Simulator.
        * Scripts/webkitpy/port/ios_simulator.py:
        (IOSSimulatorPort._version_from_name): Attempt to extract the iOS version from the name
        of the port.
        (IOSSimulatorPort.ios_version): Use specified iOS version if a version is detected in
        in the provided name string (just like Mac).

2017-11-29  Robin Morisset  <rmorisset@apple.com>

        The recursive tail call optimisation is wrong on closures
        https://bugs.webkit.org/show_bug.cgi?id=179835

        Reviewed by Saam Barati.

        This just includes merge-sort-cps.js to the list of benchmarks ran by run-jsc-benchmarks --tail-bench

        * Scripts/run-jsc-benchmarks:

2017-11-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        WebDriver: add an option to dump test results to a json file
        https://bugs.webkit.org/show_bug.cgi?id=180082

        Reviewed by Brian Burg.

        Add --json-output command line option to run-webdriver-tests to dump test results to a json file in a format
        compatible with the W3C report. WebDriverTestResult now represents a test file and contains a list of
        subtests, instead of having one WebDriverTestResult per subtest. This way we can store also the harness result
        and dump the results to different formats.

        * Scripts/run-webdriver-tests:
        * Scripts/webkitpy/webdriver_tests/webdriver_test_result.py:
        (WebDriverTestResult.__init__):
        (WebDriverTestResult):